--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Helsa's CV Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <script src="https://kit.fontawesome.com/c2b7623e97.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="hero">
@@ -262,11 +262,11 @@
         <p>Thanks for looking through my CV.</p>
         <p>You can reach me in</p>
         <div class="social-media">
-            <a href="https://www.instagram.com/helsanesta/" target="_blank"><img src="/img/instagram.svg"  alt="instagram"></a>
-            <a href="https://www.linkedin.com/in/helsanesta/" target="_blank"><img src="/img/linkedin.svg" alt="linkedin"></a>
-            <a href="https://twitter.com/HelsaNesta" target="_blank"><img src="/img/square-twitter.svg" alt="twitter"></a>
-            <a href="#" onclick="OpenMail()"><img src="/img/square-envelope-solid.svg" alt="gmail"></a>
-        </div>
+            <a href="https://www.instagram.com/helsanesta/" target="_blank"><i class="fa-brands fa-square-instagram fa-2x" style="color:black"></i></a>
+            <a href="https://www.linkedin.com/in/helsanesta/" target="_blank"><i class="fa-brands fa-linkedin-in fa-2x" style="color: black;"></i></a>
+            <a href="https://twitter.com/HelsaNesta" target="_blank"><i class="fa-brands fa-twitter fa-2x" style="color: black"></i></a>
+            <a href="#" onclick="OpenMail()"><i class="fa-solid fa-envelope fa-2x" style="color: black;"></i></a>
+        </div> 
         <p class="update">&copy; helsajournal.wordpress.com | Designed by Helsa Nesta</p>
     </footer>
 </body>
